Update: Fixed backend URL, env config, and login API call

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=https://NoteApp.onrender.com
+VITE_BACKEND_URL=https://noteapp-tz9a.onrender.com
 VITE_GOOGLE_CLIENT_ID=129837928492-92kv81vd7s3bskpiq546f5i386g9s2tv.apps.googleusercontent.com
